--- a/src/app/modules/reports/loan-information-detail/loan-information-detail.component.html
+++ b/src/app/modules/reports/loan-information-detail/loan-information-detail.component.html
@@ -32,47 +32,23 @@
 
                         <div class="col-lg-12">
                             <div class="flex" style="flex-wrap: wrap;">
-                                <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="true" [is_required_circle]="true"
+                                <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="false" [is_required_circle]="false"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-
-
-                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">Working Date (ddMMyyyy) <strong class="matMandatory">*</strong>
-                                        </mat-label>
-                                        <input matInput [matDatepicker]="picker2" formControlName="WorkingDate" maxlength="30"
-                                               autocomplete="off" (dateChange)="isEnableWorkingDate()" appNumberOnly/>
-                                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                                        <mat-datepicker #picker2></mat-datepicker>
-                                    </mat-form-field>
-                                </div>
 
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">LC NO</mat-label>
-                                        <input matInput placeholder="Enter LC NO" formControlName="LcNo" maxlength="30" autocomplete="off" appNumberOnly/>
+                                        <input matInput placeholder="Enter LC NO" formControlName="LcNO" maxlength="30" autocomplete="off" appNumberOnly/>
                                     </mat-form-field>
                                 </div>
+
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">Account Status<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="Status">
-                                            <mat-option *ngFor="let lov of statusLov" [value]="lov.Value">
-                                                {{lov.Description}}
-                                            </mat-option>
-                                        </mat-select>
+                                        <mat-label class="customMatLabel">GL Code</mat-label>
+                                        <input matInput placeholder="Enter GL Code" formControlName="GLCode" maxlength="30" autocomplete="off" appNumberOnly/>
                                     </mat-form-field>
                                 </div>
-                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">Export Format<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="ReportFormatType">
-                                            <mat-option *ngFor="let lov of select" [value]="lov.Value">
-                                                {{lov.description}}
-                                            </mat-option>
-                                        </mat-select>
-                                    </mat-form-field>
-                                </div>
+
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <button class="bg-gray-500"  mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
                                 </div>
@@ -88,7 +64,43 @@
 
 
             </form>
+
         </div>
+    </div>
+
+    <div class="col-lg-12">
+
+        <table class="table table-striped " *ngIf="table">
+            <thead>
+            <tr class="table-header-background">
+<!--                <th style="padding-right: 100px">Name</th>-->
+                <th>Branch</th>
+                <th>Name</th>
+                <th>Cnic</th>
+                <th>Father Name</th>
+                <th>LCNO</th>
+                <th>GL Code</th>
+                <th>Action</th>
+<!--                <th style="padding-right: 70px">Action</th>-->
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let report of LoanInfoDetail">
+<!--                <td style="padding-right: 100px">{{report.Sequence}}</td>-->
+                <td>{{report.BranchName}}</td>
+                <td>{{report.CustomerName}}</td>
+                <td>{{report.Cnic}}</td>
+                <td>{{report.FatherName}}</td>
+                <td>{{report.LoanCaseNo}}</td>
+                <td>{{report.GlSubCode}}</td>
+                <td>
+                    <span style="color: #01671B; text-decoration: underline;" class="cursor-pointer" id="llcInqiryText" (click)="download(report)"><b>Download</b></span>
+                </td>
+<!--                <td style="padding-right: 70px">-->
+<!--                    <span style="color: #01671B; text-decoration: underline;" class="cursor-pointer" id="llcInqiryText" (click)="print(report)"><b>Print</b></span>-->
+<!--                </td>-->
+            </tbody>
+        </table>
     </div>
 
 
