--- a/src/app/modules/reports/user-activity-based-report/user-activity-based-report.component.html
+++ b/src/app/modules/reports/user-activity-based-report/user-activity-based-report.component.html
@@ -30,9 +30,40 @@
 
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
-                                    <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="false"
-                                                            [is_required_circle]="false"
-                                                            (branchZoneCircleData)="getAllData($event)" [should_filter]="false"></app-zone-branch-circle>
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label class="customMatLabel">PPNO:</mat-label>
+                                            <input matInput placeholder="Enter PPNO" formControlName="PPNo"
+                                                   appNumberOnly autocomplete="off"/>
+                                        </mat-form-field>
+                                    </div>
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label class="customMatLabel">From Date<strong
+                                                class="matMandatory">*</strong>
+                                            </mat-label>
+                                            <input matInput [matDatepicker]="picker2" formControlName="FromDate"
+                                                   maxlength="30"
+                                                   autocomplete="off" (dateChange)="isEnableFromDate()" appNumberOnly/>
+                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                                            <mat-datepicker #picker2></mat-datepicker>
+                                        </mat-form-field>
+                                    </div>
+
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label class="customMatLabel">To Date<strong class="matMandatory">*</strong>
+                                            </mat-label>
+                                            <input matInput [matDatepicker]="picker3" formControlName="ToDate"
+                                                   maxlength="30"
+                                                   autocomplete="off" (dateChange)="isEnableToDate()" appNumberOnly/>
+                                            <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+                                            <mat-datepicker #picker3></mat-datepicker>
+                                        </mat-form-field>
+                                    </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <button class="bg-gray-500" mat-raised-button color="primary" (click)="find()"
