--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="row ">
-            <div class="col-lg-4 table-responsive">
+            <div class="col-lg-6 table-responsive">
                 <p class="heading mb-2 text-lg">Disbursement</p>
                 <table class="table  table-striped">
                     <!-- <thead>
@@ -110,7 +110,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="col-lg-4  table-responsive">
+            <div class="col-lg-6  table-responsive">
                 <p class="heading mb-2 text-lg">Recovery</p>
                 <table class="table  table-striped">
                     <!-- <thead>
@@ -129,7 +129,10 @@
                     </tbody>
                 </table>
             </div>
-            <div class="col-lg-4   table-responsive">
+         </div>
+        <div class="row ">
+
+            <div class="col-lg-6   table-responsive">
                 <p class="heading mb-2 text-lg">Utilization/Mutations</p>
                 <table class="table  table-striped">
                     <!-- <thead>
