--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -113,13 +113,13 @@
                     <p class="heading mb-2 text-lg">Recovery</p>
                     <table class="table  table-striped">
 
-                        <!-- <thead>
+                        <thead>
                         <tr class="table-header-background">
                             <th scope="col">Calendar Year Target</th>
                             <th scope="col">Achievement</th>
                             <th scope="col">%age</th>
                         </tr>
-                        </thead> -->
+                        </thead>
                         <tbody>
                         <tr *ngFor="let item of ResourcesCount">
                             <td>{{item[0]}}</td>
