--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -57,7 +57,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3 pb-1">
-                    <div class="shadow-sm border pt-2 mb-5"    style="height: calc(100vh - 310px);" *ngIf="CreditCeiling">
+                    <div class="shadow-sm border pt-2"    style="height: calc(100vh - 310px);" *ngIf="CreditCeiling">
                         <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling">
 
@@ -67,28 +67,7 @@
                 </div>
             </div>
             <div class="row  justify-content-md-center">
-
-                <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">Recovery</p>
-                    <table class="table  table-striped">
-
-                        <!--                        <thead>-->
-                        <!--                        <tr class="table-header-background">-->
-                        <!--                            <th scope="col">Calendar Year Target</th>-->
-                        <!--                            <th scope="col">Achievement</th>-->
-                        <!--                            <th scope="col">%age</th>-->
-                        <!--                        </tr>-->
-                        <!--                        </thead>-->
-                        <tbody>
-                        <tr *ngFor="let item of recoveryAchievment">
-                            <th>{{item[0]}}</th>
-                            <td>{{item[1]}}</td>
-                            <td></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="col-lg-6 table-responsive">
+                <div class="col-lg-12 table-responsive">
                     <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
                     <table class="table  table-striped">
 
@@ -110,6 +89,30 @@
                             <td>{{item?.NplOS}}</td>
                             <td>{{item?.SamOS}}</td>
                             <td>{{item?.TotalOS}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+
+            </div>
+            <div class="row">
+                <div class="col-lg-6 table-responsive">
+                    <p class="heading mb-2 text-lg">Recovery</p>
+                    <table class="table  table-striped">
+
+                        <!--                        <thead>-->
+                        <!--                        <tr class="table-header-background">-->
+                        <!--                            <th scope="col">Calendar Year Target</th>-->
+                        <!--                            <th scope="col">Achievement</th>-->
+                        <!--                            <th scope="col">%age</th>-->
+                        <!--                        </tr>-->
+                        <!--                        </thead>-->
+                        <tbody>
+                        <tr *ngFor="let item of recoveryAchievment">
+                            <th>{{item[0]}}</th>
+                            <td>{{item[1]}}</td>
+                            <td></td>
                         </tr>
                         </tbody>
                     </table>
