--- a/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
+++ b/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
@@ -65,27 +65,7 @@
                 </div>
             </div>
             <div class="row  justify-content-md-center">
-
-                <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">Recovery</p>
-                    <table class="table  table-striped">
-
-                        <!-- <thead>
-                        <tr class="table-header-background">
-                            <th scope="col">Calendar Year Target</th>
-                            <th scope="col">Achievement</th>
-                            <th scope="col">%age</th>
-                        </tr>
-                        </thead> -->
-                        <tbody>
-                        <tr *ngFor="let item of RecoveryAchievement">
-                            <td>{{item[0]}}</td>
-                            <td>{{item[1]}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="col-lg-6 table-responsive">
+                <div class="col-lg-12 table-responsive">
                     <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
                     <table class="table  table-striped">
 
@@ -111,6 +91,30 @@
                         </tbody>
                     </table>
                     <pagination-controls (pageChange)="p = $event" class="my-pagination"></pagination-controls>
+                </div>
+
+
+            </div>
+
+            <div class="row">
+                <div class="col-lg-6 table-responsive">
+                    <p class="heading mb-2 text-lg">Recovery</p>
+                    <table class="table  table-striped">
+
+                        <!-- <thead>
+                        <tr class="table-header-background">
+                            <th scope="col">Calendar Year Target</th>
+                            <th scope="col">Achievement</th>
+                            <th scope="col">%age</th>
+                        </tr>
+                        </thead> -->
+                        <tbody>
+                        <tr *ngFor="let item of RecoveryAchievement">
+                            <td>{{item[0]}}</td>
+                            <td>{{item[1]}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
