--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -71,9 +71,9 @@
             <table class="table accordion table-striped">
                 <thead>
                 <tr class="table-header-background">
-                    <th scope="col">SR. No</th>
-                    <th scope="col">User</th>
-                    <th scope="col">Visited Date</th>
+<!--                    <th scope="col">SR. No</th>-->
+                    <th scope="col">Circle</th>
+                    <th scope="col">Visit Date</th>
                     <th scope="col">Purpose</th>
                     <th scope="col">Remarks</th>
                     <th scope="col">Status</th>
@@ -82,11 +82,11 @@
                 </thead>
                 <tbody>
                 <tr *ngFor="let item of tragetList | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems};  let row=index;">
-                    <td>{{row + 1}}</td>
-                    <td>{{item.UserId}}</td>
+<!--                    <td>{{row + 1}}</td>-->
+                    <td>{{item.CircleId}}</td>
                     <td>{{item.VisitedDate}}</td>
                     <td>{{item?.PurposeName}}</td>
-                    <td>    
+                    <td>
                         <p class="remarks-box">
                         {{item.Remarks}}
                         </p>
