--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -141,7 +141,7 @@
                             <td style="width: 20%">{{child.VisitedDate}}</td>
                             <td style="width: 20%">{{child.PurposeName}}</td>
                             <td style="width: 20%">{{child.Remarks}}</td>
-                            <td style="width: 20%">{{getStatus(child.Status)}}</td>
+                            <td style="width: 20%">{{child.StatusName}}</td>
 
                             <td style="width: 20%">
 
