--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -74,7 +74,7 @@
                 <thead>
                 <tr class="table-header-background">
                     <!--                    <th scope="col">SR. No</th>-->
-                    <th scope="col">Circle</th>
+<!--                    <th scope="col">Circle</th>-->
                     <th scope="col">Visit Date</th>
                     <th scope="col">Purpose</th>
                     <th scope="col">Remarks</th>
@@ -85,7 +85,7 @@
                 <tbody>
                 <tr *ngFor="let item of tragetList | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems};  let row=index;">
                     <!--                    <td>{{row + 1}}</td>-->
-                    <td>{{item.CircleId}}</td>
+<!--                    <td>{{item.CircleId}}</td>-->
                     <td>{{item.VisitedDate}}</td>
                     <td>{{item?.PurposeName}}</td>
                     <td>
