--- a/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
+++ b/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
@@ -40,7 +40,10 @@
                 <table class="table table-responsive mt-3" style="display: inline-table !important;">
                     <thead class="thead-light">
                     <tr class="table-header-background">
-                        <th>VisitedDate</th>
+                        <th>Zone</th>
+                        <th>Branch</th>
+                        <th>Circle</th>
+                        <th>Visited Date</th>
                         <th>Purpose</th>
                         <th>Remarks</th>
                         <th>Status</th>
@@ -50,10 +53,13 @@
                     </thead>
                     <tbody>
                     <tr *ngFor="let child of activity.TourPlans;let j=index">
+                        <td style="width: 20%">{{getZoneName(child?.ZoneId)}}</td>
+                        <td style="width: 20%">{{getBranchName(child?.BranchId)}}</td>
+                        <td style="width: 20%">{{child?.CircleId}}</td>
                         <td style="width: 20%">{{child.VisitedDate ? child.VisitedDate : '-'}}</td>
                         <td style="width: 20%">{{child.PurposeName ? child.PurposeName : '-'}}</td>
                         <td style="width: 20%">{{child.Remarks ? child.Remarks : '-'}}</td>
-                        <td style="width: 20%">{{getStatus(child.Status)}}</td>
+                        <td style="width: 20%">{{child?.StatusName}}</td>
 
                         <td style="width: 20%">
                             <mat-checkbox *ngIf="checkBoxCheck(child.Status)" (change)="changeCheckBox(activity,child)"></mat-checkbox>
