--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -50,7 +50,7 @@
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label class="customMatLabel">Remarks</mat-label>
-                    <input matInput placeholder="Enter Remarks" formControlName="Remarks"
+                    <input maxlength="500" matInput placeholder="Enter Remarks" formControlName="Remarks"
                            autocomplete="off" [readonly]="viewMode"/>
                 </mat-form-field>
             </div>
