--- a/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
+++ b/src/app/modules/tour-plan/signature-pad-for-tour/signature-pad-for-tour.component.html
@@ -20,7 +20,7 @@
     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 overflow-hidden">
         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label>Remarks</mat-label>
-            <input matInput [(ngModel)]="remarks" placeholder="Remarks"/>
+            <input maxlength="500" matInput [(ngModel)]="remarks" placeholder="Remarks"/>
         </mat-form-field>
     </div>
 </div>
